--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Intro-Java-Swing
+application.vendor=shyam.r
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/Intro-Java-Swing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Intro-Java-Swing
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\shyam.r\\IdeaProjects\\mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar=lib\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
