--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\shyam.r\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
